# space-ants

./: CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: tests.yml
data/ants/: ants.asset  ants.pack
data/ants/explosion/: explosion.asset  explosion.assets  explosion.pack  particle.blend  particle.blend_DefaultMaterial.cpm
data/ants/laser/: laser.asset  laser.assets  laser.obj_DefaultMaterial.cpm  laser.pack
data/ants/planets/: planets.assets  planets.pack
data/ants/planets/farcodev/: 0.cpm  0.object  1.cpm  1.object  2.cpm  2.object  3.cpm  3.object  4.cpm  4.object  5.cpm  5.object  6.cpm  6.object  7.cpm  7.object  credits.txt  farcodev.asset  farcodev.assets  farcodev.pack  sphere.blend
data/ants/ships/: ships.assets  ships.pack
data/ants/ships/1/: 1.asset  1.assets  1.blend  1.obj_DefaultMaterial.cpm  1.object  1.pack  coarse.cpm
data/ants/skybox/: skybox.asset  skybox.assets  skybox.obj_DefaultMaterial.cpm  skybox.pack
sources/: camera.cpp  common.h  components.cpp  gui.cpp  main.cpp  physics.cpp  planets.cpp  ships.cpp  timeout.cpp
